se ha programado la conxion a la base de datos "CONEXIONMAESTRA"

--- a/Colegio.vbproj
+++ b/Colegio.vbproj
@@ -73,6 +73,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="conexion\CONEXIONMAESTRA.vb" />
     <Compile Include="LOGIN.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -129,8 +130,6 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="conexion\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
