--- a/Colegio.vbproj
+++ b/Colegio.vbproj
@@ -75,11 +75,22 @@
   <ItemGroup>
     <Compile Include="conexion\CONEXIONMAESTRA.vb" />
     <Compile Include="conexion\Tamaño_automatico_de_datatables.vb" />
-    <Compile Include="LOGIN.vb">
+    <Compile Include="MODULOS\LOGIN\LOGIN.Designer.vb">
+      <DependentUpon>LOGIN.vb</DependentUpon>
+    </Compile>
+    <Compile Include="MODULOS\LOGIN\LOGIN.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LOGIN.Designer.vb">
-      <DependentUpon>LOGIN.vb</DependentUpon>
+    <Compile Include="MODULOS\MENUPRINCIPAL\MENUPRINCIPALMATRICULAS.Designer.vb">
+      <DependentUpon>MENUPRINCIPALMATRICULAS.vb</DependentUpon>
+    </Compile>
+    <Compile Include="MODULOS\MENUPRINCIPAL\MENUPRINCIPALMATRICULAS.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MODULOS\USUARIOS\usuariosok.Designer.vb">
+      <DependentUpon>usuariosok.vb</DependentUpon>
+    </Compile>
+    <Compile Include="MODULOS\USUARIOS\usuariosok.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -98,25 +109,22 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="usuariosok.Designer.vb">
-      <DependentUpon>usuariosok.vb</DependentUpon>
-    </Compile>
-    <Compile Include="usuariosok.vb">
-      <SubType>Form</SubType>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="LOGIN.resx">
+    <EmbeddedResource Include="MODULOS\LOGIN\LOGIN.resx">
       <DependentUpon>LOGIN.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MODULOS\MENUPRINCIPAL\MENUPRINCIPALMATRICULAS.resx">
+      <DependentUpon>MENUPRINCIPALMATRICULAS.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MODULOS\USUARIOS\usuariosok.resx">
+      <DependentUpon>usuariosok.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="usuariosok.resx">
-      <DependentUpon>usuariosok.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -131,8 +139,6 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MODULOS\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
