se diseño el formulario matriculas

--- a/Colegio.vbproj
+++ b/Colegio.vbproj
@@ -87,6 +87,12 @@
     <Compile Include="MODULOS\LOGIN\LOGIN.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MODULOS\matriculas\Matriculas.Designer.vb">
+      <DependentUpon>Matriculas.vb</DependentUpon>
+    </Compile>
+    <Compile Include="MODULOS\matriculas\Matriculas.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MODULOS\MENUPRINCIPAL\MENUPRINCIPALMATRICULAS.Designer.vb">
       <DependentUpon>MENUPRINCIPALMATRICULAS.vb</DependentUpon>
     </Compile>
@@ -122,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MODULOS\LOGIN\LOGIN.resx">
       <DependentUpon>LOGIN.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MODULOS\matriculas\Matriculas.resx">
+      <DependentUpon>Matriculas.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MODULOS\MENUPRINCIPAL\MENUPRINCIPALMATRICULAS.resx">
       <DependentUpon>MENUPRINCIPALMATRICULAS.vb</DependentUpon>
